--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "main": "dist/",
     "ignore": [
-        "demo/raphael/",
+        "demo/",
         ".gitignore",
         "bower.json",
         "README.md",
